--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,14 @@ header {
 
 }
 
+.time-up {
+    display: flex!important;
+    justify-content: center!important;
+    padding-bottom: 10px!important;
+    font-size: 30px!important;
+}
+
+
 body {
     background-color: blanchedalmond;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -30,6 +38,13 @@ body {
     align-items: flex-start!important;
     color: teal;
     font-size: 50px;
+} */
+
+/* .time-up {
+    display: flex!important;
+    justify-content: center!important;
+    padding-bottom: 10px!important;
+    font-size: 30px!important;
 } */
 
 section {
